--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,25 @@
                 <h2>Manage <b> Events</b> <button type="button" class="btn btn-success float-right"
                 data-toggle="modal" data-target="#mymodal">Add new event</button> </h2>
 
+                {% with messages = get_flashed_messages() %}
+
+                {% if messages %}
+
+                {% for message in messages %}
+
+                <div class="alert alert-success alert-dismissable" role="alert">
+
+                    <button type="button" class="close" data-dismiss="alert" aria-label="close">
+                        <span aria-hidden="thrue">x</span>
+                    </button>
+                    {{message}}
+
+                </div>
+
+                {% endfor %}
+                {% endif %}
+                {% endwith %}
+
                 <table class="table table-hover table-dark">
                     <tr>
                         <th>ID</th>
@@ -23,20 +42,106 @@
                         <th>Title</th>
                         <th>Event content</th>
                     </tr>
+
+                    {% for row in events %}
+
                     <tr>
-                        <td>01</td>
-                        <td>2020-05-16</td>
-                        <td>8:30AM</td>
-                        <td>Встреча</td>
-                        <td>Очень важная встреча</td>
+                        <td>{{row.id}}</td>
+                        <td>{{row.date}}</td>
+                        <td>{{row.time}}</td>
+                        <td>{{row.title}}</td>
+                        <td>{{row.event_content}}</td>
                         <td>
-                            <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Edit</a>
+                            <a href="/update/{{row.id}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{row.id}}">Edit</a>
+                            <a href="/delete/{{row.id}}" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure to delete ?')">Delete</a>
                         </td>
                     </tr>
+                    <!-- Modal Edit-->
+                    <div id="modaledit{{row.id}}" class="modal fade" role="dialog">
+                        <div class="modal-dialog">
+                             <div class="modal-content">
+                                 <div class="modal-header">
+                                     <h4 class="modal-title">Update information</h4>
+                                 </div>
+                                 <div class="modal-body">
+                                     <form action="{{url_for('update')}}" method="POST">
+                                         <div class="from-group">
+                                             <label>Date:</label>
+                                             <input type="hidden" name="id" value="{{row.id}}">
+                                             <input type="date" class="from-control" name="date" value="{{row.date}}">
+                                         </div>
+                                         <div class="from-group">
+                                             <label>Time:</label>
+                                             <input type="time" class="from-control" name="time" value="{{row.time}}"">
+                                         </div>
+                                         <div class="from-group">
+                                             <label>Title:</label>
+                                             <input type="text" class="from-control" name="title" value="{{row.title}}"">
+                                         </div>
+                                         <div class="from-group">
+                                             <label>Event content:</label>
+                                             <input type="text" class="from-control" name="event_content" value="{{row.event_content}}"">
+                                         </div>
+                                         <div class="from-group">
+                                             <button class="btn btn-primary" type="submit">Update</button>
+                                         </div>
+                                     </form>
+                                 </div>
+                                 <div class="modal-footer">
+                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                 </div>
+                             </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+
                 </table>
             </div>
         </div>
+        <!-- Add event -->
 
+        <div id="mymodal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Add event</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form action="{{url_for('insert')}}" method="POST">
+                            <div class="from-group">
+                                <label>Date:</label>
+                                <input type="date" class="from-control" name="date" required="1">
+                            </div>
+
+                            <div class="from-group">
+                                <label>Time:</label>
+                                <input type="time" class="from-control" name="time" required="1">
+                            </div>
+
+                             <div class="from-group">
+                                <label>Title:</label>
+                                <input type="text" class="from-control" name="title" required="1">
+                            </div>
+
+                            <div class="from-group">
+                                <label>Event content:</label>
+                                <input type="text" class="from-control" name="event_content" required="1">
+                            </div>
+                            <div class="from-group">
+
+                                <button class="btn btn-primary" type="submit">Add new event</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
 
