--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,20 @@
 <html lang="en">
 <head>
 
-     <link href="{{ url_for('static', filename = 'css/bootstrap.min.css') }}" rel="stylesheet"/>
     <meta charset="UTF-8">
+    <link href="{{ url_for('static', filename = 'css/bootstrap.min.css') }}" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <title>{% block title %} {% endblock %}</title>
+
+
 </head>
 <body>
 
 {% block body %} {% endblock %}
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 </body>
 </html>
