--- a/app_to_do_list/web/templates/base.html
+++ b/app_to_do_list/web/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link href="{{ url_for('static', filename = 'css/bootstrap.min.css') }}" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+<!--    <link rel="stylesheet" type="text/css" href="css/style.css">-->
 
     <title>{% block title %} {% endblock %}</title>
 
